--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@ var storymap = new VCO.StoryMap('mapdiv', storymap_data, storymap_options);
 window.onresize = function(event) {
     storymap.updateDisplay(); // this isn't automatic
 }
+    
+vis.map.set({
+            minZoom: 3,
+            maxZoom: 6
+          });
+    
 </script>
 </body>
 </html>
