--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     Of course, you can specify width and height with CSS instead -->
 <div id="mapdiv" style="width: 100%; height: 100%;"></div>
 
+<div class= "leftPanel.css-j5bhtn"></div>
+             
+
 <!-- Your script tags should be placed before the closing body tag. -->
 <script type="text/javascript" src="https://cdn.knightlab.com/libs/storymapjs/latest/js/storymap-min.js"></script>
 
